--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://blog.cuongcode.net/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'blog.cuongcode.net'
+theme = 'PaperMod'
