--- a/hugo/hugo.toml
+++ b/hugo/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://blog.cuongcode.net/'
 languageCode = 'en-us'
-title = 'blog.cuongcode.net'
+title = 'Cương code dotnet'
 theme = 'PaperMod'
